--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,8 @@ services:
       - "8081:8081"
       - "8082:8082"
       - "8083:8083"
+      - "8084:8084"
+      - "8085:8085"
     # https://yeti.tistory.com/218
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -111,9 +113,13 @@ services:
     depends_on:
       - radio
       - account
+      - post
+      - admin
     links:
       - radio
       - account
+      - post
+      - admin
 
   radio:
     container_name: radio
@@ -270,6 +276,86 @@ services:
       - ./cms_secret.json:/backend/secret.json
       - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
 
+  post:
+    container_name: post
+    restart: always
+    image: gcr.io/apoweroftrance/post:dev-pod
+#    image: gcr.io/apoweroftrance/post:production-latest
+#    build: post
+    environment:
+      ENABLE_SWAGGER: 1
+      ENABLE_EMAIL_SEND: 1
+      DB_NAME: apoweroftrance
+      DB_HOST: 10.0.0.4
+      DB_USERNAME: whiteblue3
+      DB_PASSWORD: ?!Triace07
+      DB_PORT: 5432
+      NGINX: 10.0.0.6:8084
+      REDIS_URL: 10.0.0.5
+      REDIS_PORT: 6379
+      REDIS_DB: 0
+      WAIT_SERVICE: 1
+      WAIT_URL: 10.0.0.8
+      WAIT_PORT: 8091
+      INSTALL: 1
+      MIGRATE: 1
+      AUTOSTART: 1
+    depends_on:
+      - redis
+      - db
+    links:
+      - redis
+      - db
+    ports:
+      - "8094:8094"
+    networks:
+      apoweroftrance:
+        ipv4_address: 10.0.0.11
+    volumes:
+      - post_data:/backend
+      - ./post_secret.json:/backend/secret.json
+      - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
+
+  admin:
+    container_name: admin
+    restart: always
+    image: gcr.io/apoweroftrance/admin:dev-pod
+#    image: gcr.io/apoweroftrance/admin:production-latest
+#    build: admin
+    environment:
+      ENABLE_SWAGGER: 1
+      ENABLE_EMAIL_SEND: 1
+      DB_NAME: apoweroftrance
+      DB_HOST: 10.0.0.4
+      DB_USERNAME: whiteblue3
+      DB_PASSWORD: ?!Triace07
+      DB_PORT: 5432
+      NGINX: 10.0.0.6:8085
+      REDIS_URL: 10.0.0.5
+      REDIS_PORT: 6379
+      REDIS_DB: 0
+      WAIT_SERVICE: 1
+      WAIT_URL: 10.0.0.8
+      WAIT_PORT: 8091
+      INSTALL: 1
+      MIGRATE: 1
+      AUTOSTART: 1
+    depends_on:
+      - redis
+      - db
+    links:
+      - redis
+      - db
+    ports:
+      - "8095:8095"
+    networks:
+      apoweroftrance:
+        ipv4_address: 10.0.0.12
+    volumes:
+      - admin_data:/backend
+      - ./admin_secret.json:/backend/secret.json
+      - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
+
 #  ffmpeg:
 #    container_name: ffmpeg
 #    restart: always
@@ -289,7 +375,7 @@ services:
 #    entrypoint: /scripts/startup.sh
 #    networks:
 #      apoweroftrance:
-#        ipv4_address: 10.0.0.11
+#        ipv4_address: 10.0.0.13
 
 
 volumes:
@@ -307,6 +393,16 @@ volumes:
     driver_opts:
       type: none
       device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radiosystem/upload #NOTE needs full path (~ doesn't work)
+      o: bind
+  post_data:
+    driver_opts:
+      type: none
+      device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radiosystem/post #NOTE needs full path (~ doesn't work)
+      o: bind
+  admin_data:
+    driver_opts:
+      type: none
+      device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radiosystem/admin #NOTE needs full path (~ doesn't work)
       o: bind
   musicdaemon_data:
     driver_opts:
